# TicketTac

./: .env-example  README.md  docker-compose.yml
db-init/: db-init.sql
k8s/: README.md
k8s/app/: Chart.yaml  values.yaml
k8s/app/files/: init.sql
k8s/app/templates/: api-deployment.yaml  api-service.yaml  front-deployment.yaml  front-service.yaml  hpa-front.yaml  hpa.yaml  mailer-deployment.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-service.yaml  rabbitmq-service.yaml  rabbitmq-statefulset.yaml
mailer-service/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml  script_mailer.py
mailer-service/mailer/: mailer.py
ticketing_api/: .env-example  docker-compose.yml  pyproject.toml
ticketing_api/.github/workflows/: ci.yml
ticketing_api/app/: main.py  security.py
ticketing_api/app/controllers/: event_controller.py  ticket_controller.py  user_controller.py
ticketing_api/app/core/: config.py
ticketing_api/app/database/: database.py
ticketing_api/app/entities/: __init__.py  event.py  ticket.py  user.py
ticketing_api/app/schemas/: event_schemas.py  ticket_schemas.py  user_schemas.py
ticketing_api/app/services/: event_service.py  ticket_service.py  user_service.py
ticketing_front/: Dockerfile  package-lock.json  package.json
ticketing_front/src/components/: Admin.js  AdminEvents.js  AdminUsers.js  EventCard.js  EventDetails.js  Footer.js  Header.js  Home.js  Login.js  Payment.js  Profile.js  ProfileTickets.js  Register.js  SearchBar.js
ticketing_front/src/css/: AdminEvents.css  EventCard.css  EventDetails.css  (+8 more)
(+8 files in other folders)
